# lbann

include/lbann/: lbann.hpp
include/lbann/data_readers/: CMakeLists.txt  data_reader_voc.hpp
include/lbann/layers/transform/: safe_inv.hpp
src/data_readers/: CMakeLists.txt  data_reader_voc.cpp
src/proto/: init_image_data_readers.cpp  lbann.proto  proto_common.cpp
src/proto/factories/: layer_factory.cpp
ssd/: build.sh  data_reader_voc.prototext  opt_sgd.prototext  pbuild.sh  run.sh  run2.sh
ssd/data/: train1.csv  train16.csv  train_small.csv
tests/test_img_pipeline/: CMakeLists.txt
tools/voc_load/: CMakeLists.txt  build.sh  data_reader.hpp  data_reader_voc.cpp  data_reader_voc.hpp  debug.sh  full_test_data.csv  rebuild.sh  run.sh  voc_load.cpp
tools/voc_load/data/: train_full.csv
tools/voc_load/old/: data_reader_csv.cpp  data_reader_csv.hpp
